# cube-morphing

./: README.md
src/App/: CMakeLists.txt  Window.cpp  Window.h  main.cpp  resources.qrc
src/App/Models/: Cube.glb  Cube.gltf  oxycube.glb  vert_cube.glb
src/App/Shaders/: cube.fs  cube.vs
